--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.2 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "dompdf/dompdf": "^1",
-        "illuminate/support": "^6|^7|^8"
+        "illuminate/support": "^5.8|^6|^7|^8"
     },
     "require-dev": {
         "orchestra/testbench": "^4|^5|^6",
